feat: add features to reps profile
